MCGR: tdf#155913 Non-supported attributes for TransparenceGradient

In ODF spec there is no
- MID_GRADIENT_STARTINTENSITY
- MID_GRADIENT_ENDINTENSITY
- MID_GRADIENT_STEPCOUNT
so these should not be used in the core data, too. The last one
leads to this error.

I experimentally added to hanle these 'harder' in the UNO API
implementation, too, to reflect that these are not supported
and produce UNO API access errors. This is not urgently
necessary, but let's see if that triggers problems.

That these attributes were initially supported is due to the
Item hosting those values for transparency gradient is directly
derived from gradient and the implementations usually use the
fallback to call the parent implementation(s).

Change-Id: I982c4047d82bfe306dbcef9d1b64b8d212bf8d59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153799
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>